Problem dumping protection info and generalized uni diversity objects
This issue was migrated from bug 2201 in our old bug tracker.
Original bug information:
Reporter: Giodi Giorgi
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: Linux
Platform: x86
Version: Git
Attachments:
protection_guni.patch: this patch allows wireshark to dump the rsvp protection info object according to RFC 3471
protection_gunidiv.pcap: This file shows the dump of the PROTECTION object and the GUNI diversity sunobject
protection_info.pcap: Dump file for PROTECTION_INFO