From Giodi Giorgi (bug 2201): Fix dumping of PROTECTION INFO and GENERALIZED UNI according to RFC3471.

svn path=/trunk/; revision=25002